# letters-to-steve

./: .gitignore  Dockerfile  README.md  docker-compose.yml  justfile  main.w  package-lock.json  prod.py  pyproject.toml
.github/workflows/: build.yml
src/letters_to_steve/: __init__.py  db.py
static/: index.html
templates/: index.html
