[project]
name = "letters-to-steve"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Jack Arthur Harrhy", email = "me@jackharrhy.com" }]
dependencies = [
    "fastapi>=0.109.2",
    "uvicorn>=0.27.0.post1",
    "jinja2>=3.1.3",
    "aiosqlite>=0.19.0",
    "sse-starlette>=2.0.0",
    "loguru>=0.7.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
dev = "letters_to_steve:dev"
prod = "letters_to_steve:prod"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/letters_to_steve"]
